[FIX] html_builder: fix and improve the invisible panel behavior
This commit fixes the behavior of the invisible panel when toggling the
mobile/desktop view. Indeed, the panel was updated at the right time but
the selector used to update the entries was not the right one, as it was
using the old one in the current props instead of the updated one in the
`onWillUpdateProps` hook. This caused the children of invisible elements
to not be considered as sub-entries in the panel.

Steps to reproduce:
- Drop a "Text - Image" snippet.
- Click on a column and hide it on desktop.
- Click on the section and hide it on desktop too.
=> "Column" is well a sub-entry of "Text - Image".
- Drop another snippet and do the same for mobile.
- Toggle the mobile view then toggle back the desktop view.
=> "Column" and "Text - Image" are considered as independent entries.

This commit also adds back the `└` before the sub-entries name, which
was missing since the conversion. The sublevel class was well added but
the linked CSS rules were forgotten.

This commit also changes the way sub-entries are handled. Before this
commit, all the sub-entries were always displayed: hiding a parent entry
would also hide the sub-entries, and showing a sub-entry would also show
its parents. In order to simplify the flow and to avoid confusion, a
sub-entry is now only displayed if its parent entry is visible and only
the toggled entry visibility is changed. This allows to not pollute the
panel with elements the user cannot even see.

This commit finally makes the page scroll to the showed entry, to make
it easier for the user to find the element, since it was hidden.

Some tours have also been adapted.

task-4367641

X-original-commit: 6bf62f374ca4a78a2181806078aff88784282a39
Co-authored by: Sébastien (blse) <blse@odoo.com>

--- a/addons/html_builder/static/src/builder.scss
+++ b/addons/html_builder/static/src/builder.scss
@@ -151,6 +151,31 @@
     }
 }
 
+%o_we_sublevel > div.o_title::before {
+    content: "└"; // TODO The size and look of this depends on the
+                  // browser default font, we should use a SVG instead.
+    display: inline-block;
+    margin-right: 0.4em;
+
+    .o_rtl & {
+        transform: scaleX(-1);
+    }
+}
+@for $level from 1 through 3 {
+    .o_we_sublevel_#{$level} {
+        --o-we-checkbox-color: #{$o-we-fg-light};
+
+        @extend %o_we_sublevel;
+        color: $o-we-fg-light;
+
+        @if $level > 1 {
+            > div.o_title {
+                padding-left: ($level - 1) * 0.6em;
+            }
+        }
+    }
+}
+
 // TODO: adjust the style of those elements
 .o_pager_container {
     overflow-y: scroll;
